# edm-stata

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CMakeLists.txt  Compile  Compile_smapb  Dockerfile  Makefile  README.md  compile.bat  conanfile.txt  edm.ado  index.html  mkdocs.yml  sj-edm_ed.do  smap_block_mdap.c  smap_block_mdap.plugin  vcpkg.json
.github/workflows/: build-and-test-package.yml  build-cpu.yml  build-gpu-linux.yml  build-gpu-windows.yml  cmake.yml  integration-test.yml  publish-mkdocs.yml  unit-test.yml
adding-to-manifold/: index.html
api/: index.html
assets/: adding-to-manifold.js  coprediction.js  explore.js  manifold.js  setup-mathjax.js
automated-workflows/: index.html
cmake/: ClangFormat.cmake
coprediction/: index.html
docs/: adding-to-manifold.md  api.md  automated-workflows.md  chicago.md  coprediction.md  examples.md  explore.md  gpu.md  index.html  index.md  logistic-map.md  missing-data.md  other_edm.md  plugin.md  time-delayed-embedding.md  tutorial.jl  xmap.md
docs/assets/: adding-to-manifold.js  coprediction.js  explore.js  manifold.js  setup-mathjax.js  time-delayed-embedding.js  xmap.js
docs/examples/: chicago.md  logistic-map.md  run-stata-notebooks.do  sj-edm.do
docs/examples/chicago/: chicago.txt
docs/examples/logistic-map/: logistic-map.txt
docs/stylesheets/: sliders.css
examples/chicago/: chicago.txt  index.html
examples/logistic-map/: index.html  logistic-map.txt
explore/: index.html
gpu/: index.html
missing-data/: index.html
search/: search_index.json
src/: EMD.h  EMD_wrapper.cpp  Makefile  ThreadPool.cpp  ThreadPool.h  benchmark.cpp  cli.cpp  cli.h  common.cpp  common.h  cpu.cpp  ctpl_stl.h  distances.cpp  distances.h  driver.c  driver.cpp  driver.h  edm.c  edm.cpp  edm.h  edm.hpp  httplib.h  hungarian.cpp  hungarian.h  library_prediction_split.h  lp_distance.cu  lp_distance.cuh  manifold.cpp  manifold.h  mersennetwister.h  network_simplex_simple.h  server.cpp  smap_block_mdap.c  smap_block_mdap.h  stata.c  stata.cpp  stats.cpp  stats.h  test-benchmark.cpp  test.cpp  (+3 more)
src/main/: benchmark.cpp  cli_main.cpp  stata.cpp  test.cpp
stata/: affectbige.h5  affectbige.json  affectsmall.h5  affectsmall.json  bin_test.do  cut-down-test.do  edm.ado  edm.pkg  filename.txt  logmaplarge.h5  logmapsmall.h5  logmapsmall.json  perf-test.do  perfinput.h5  sj-edm_ed.do  small-perf-test.do  stata.toc  test1.h5  x.txt
stylesheets/: fix-mathjax-font-subscript-bug.css
test/: Makefile  affect.csv  affect.do  affectbige.json  affectsmall.json  big-data-speed-test.do  chicago-wasserstein.json  chicago.csv  chicago.do  chicago.json  ci-test.do  cut-down-test.do  generate-gbench-test-cases.do  lazy-speed-test.do  logmaplarge.json  logmapsmall.json  max-core-big-data-speed-test.do  perf-test.do  run-tests-for-arrayfire.sh  single-thread-speed-test.do  speed-test.do  test_explore_E_10-out.json  test_explore_E_10.json  test_explore_E_10.out.json  test_xmap_E_10-out.json  test_xmap_E_10.json  test_xmap_E_2-out.json  test_xmap_E_2.json  test_xmap_E_2.out.json  test_xmap_E_5.json  test_xmap_E_5.out.json  tests-for-arrayfire.do  wass_test.py
time-delayed-embedding/: index.html
xmap/: index.html
